recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:15: error: not enough arguments for method nfirst: (l: List[Int], n: Int)List[Int].
Unspecified value parameter n.
def nlast(l:List[Int], n:Int): List[Int] = nfirst(reverse(l))
                                                 ^